--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,10 @@
 :root {
     --font-size-1: clamp(12px, 1vw, 24px);
+    --font-size-2: clamp(6px, 1.6vw, 14px);
+    --font-size-title-1: clamp(18px, 2vw, 48px);
+    --font-size-title-2: clamp(14px, 1.4vw, 36px);
     --background-color-1: rgba(109, 143, 116, 0.3);
+    --background-color-2: rgba(109, 143, 116, 0.8);
     --height-size-1: clamp(40px, 8vh, 60px);
     --height-size-2: clamp(30px, 3vh, 45px);
     --input-height: clamp(16px, 6vh, 28px);
@@ -19,12 +23,13 @@ input {
     outline: 0;
 }
 
-button {
+button, select {
     outline: 0;
 }
 
 header {
-    position: -webkit-sticky;
+    position: sticky;
+    z-index: 1;
     top: 0;
 }
 
@@ -32,16 +37,22 @@ section {
     width: 100vw;
     display: flex;
     justify-content: center;
+    flex-flow: column nowrap;
+    margin-top: 1%;
+}
+
+section * {
+    margin-bottom: 1%;
 }
 
 footer {
+    font-size: var(--font-size-2);
     width: 100vw;
-    position: fixed;
+    position: -webkit-sticky;
     bottom: 0;
 }
 
 a {
-    margin: 0 2%;
     text-decoration: none;
     color: black;
     transition-duration: .4s;
@@ -51,11 +62,31 @@ a:hover {
     color: rgb(0, 194, 42);
 }
 
-.desktop, .mobile {
+h5, .h5 {
+    font-size: var(--font-size-title-1);
+}
 
+h6 {
+    font-size: var(--font-size-title-2);
+}
+
+.title {
+    position: sticky;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.badge {
+    background-color: var(--background-color-2);
 }
 
 @media screen and (min-width: 800px) {
+    section {
+        padding: 0 10%;
+    }
+
     .desktop {
         display: inline;
     }
@@ -66,6 +97,10 @@ a:hover {
 }
 
 @media screen and (max-width: 799px) {
+    section {
+        padding: 0 5%;
+    }
+
     .desktop {
         display: none;
     }
