--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -20,9 +20,11 @@
     background-color: var(--background-color-1);
     position: relative;
     height: 60%;
+    overflow: hidden;
 }
 
 .carousel-item img {
+    max-height: 40vh;
     object-fit: contain;
 }
 
@@ -51,11 +53,10 @@
     }
 
     #modal {
-        width: 60vw;
+        width: 100%;
     }
 
     #carousel {
-        left: 2%;
         width: 100%;
     }
 }
@@ -66,11 +67,10 @@
     }
 
     #modal {
-        width: 100vw;
+        width: 100%;
     }
 
     #carousel {
-        left: -3%;
-        width: 105%;
+        width: 100%;
     }
 }
