--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -22,6 +22,10 @@
     margin-right: 1%;
 }
 
+#userImage {
+    border-radius: 20px;
+}
+
 @media screen and (min-width: 800px) {
     #profile {
         flex-flow: row nowrap;
