--- a/public/css/navigate.css
+++ b/public/css/navigate.css
@@ -33,6 +33,41 @@
     align-items: center;
 }
 
+.dropdown {
+    width: 100%;
+}
+
+.searchLink {
+    padding: 0;
+    width: 100%;
+}
+
+#dropdownList {
+    position: relative;
+    padding: 1%;
+    border-top: 0;
+    border-radius: 0 0 6px 6px;
+    text-align: center;
+    /* margin-top: 24px !important; */
+}
+
+#dropdownList li {
+    border-radius: 6px;
+    transition: .5s;
+}
+
+#dropdownList li:hover {
+    background-color: rgba(99, 99, 99, 0.3) !important;
+}
+
+#dropdownList li:nth-child(odd) {
+    background-color: rgba(109, 143, 116, 0.1);
+}
+
+#dropdownMenuLink {
+    display: hidden;
+}
+
 @media screen and (min-width: 800px) {
     .links {
         width: 80%;
@@ -43,7 +78,14 @@
     }
 
     .search {
-        width: 20%;
+        width: 20vw;
+        min-width: 160px;
+    }
+
+    #dropdownList {
+        width: 20vw !important;
+        margin-left: 102.5% !important;
+        float: right;
     }
 
     .tab {
@@ -59,7 +101,14 @@
     }
 
     .search {
-        width: 36%;
+        width: 36vw;
+        min-width: 160px;
+    }
+
+    #dropdownList {
+        width: 36vw !important;
+        margin-left: 102% !important;
+        float: right;
     }
 
     .compactMenu {
